Fix dots not showing in menu

--- a/client/src/assets/_shared.scss
+++ b/client/src/assets/_shared.scss
@@ -10,7 +10,9 @@ $boxSize: 50px;
     --backgroundColor: white;
 
     .show-dots {
-        background-image: url("@/../public/assets/icons/Dot.png");
+        .background {
+            background-image: url("@/../public/assets/icons/Dot.png");
+        }
     }
     
     .dark {
